changes to labels and legends for Firefox compatibility because no SVG baseline-shift; minor tooltip bugfix

--- a/css/tideline-tooltip.less
+++ b/css/tideline-tooltip.less
@@ -136,6 +136,7 @@
       }
       &.secondary {
         font-size: @font-size-small;
+        text-align: right;
       }
       &.dual {
         &:first-letter {
